[package]
name = "yew-todolist"
version = "0.1.0"
authors = ["davidedelpapa <davidedelpapa@yahoo.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["yew", "todo", "example"]
description = "A todolist PWA to showcase the Yew framework"
readme = "README.md"
repository="https://github.com/davidedelpapa/yew-todolist"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
yew = "0.12"
serde = "1.0"